samples/_failures_safe/1761563034_433926_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96475a61.c: In function ‘main’:
./samples/SAFE/__tmp_96475a61.c:176:5: error: ‘print_t’ undeclared (first use in this function); did you mean ‘printf’?
  176 |     print_t
      |     ^~~~~~~
      |     printf
./samples/SAFE/__tmp_96475a61.c:176:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_96475a61.c:176:12: error: expected ‘;’ at end of input
  176 |     print_t
      |            ^
      |            ;
./samples/SAFE/__tmp_96475a61.c:176:5: error: expected declaration or statement at end of input
  176 |     print_t
      |     ^~~~~~~
